api 프로젝트만 따로 빼서 거기서 전담하고 여기선 일단 게시판만