@@ -1,18 +1,14 @@
 package com.example.travelProj.domain.api;
 
+import com.example.travelProj.domain.attraction.AttractionResponse;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
-import org.springframework.web.util.UriComponentsBuilder;
-import reactor.core.publisher.Mono;
 
 import java.io.UnsupportedEncodingException;
-import java.net.URI;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -21,68 +17,89 @@ import java.util.List;
 
 @Service
 @RequiredArgsConstructor
-@Slf4j
+// 데이터 제공용 (프론트 JS 에서 호출) >  데이터 서버
 public class ApiService {
 
     private final WebClient webClient;
     private final ObjectMapper objectMapper;
 
-    @Value("${api.kor.service-key}")
-    private String serviceKey;
+    @Value("${api.url}")
+    private String apiUrl;
+    @Value("${api.key}")
+    private String apiKey;
 
-    public List<SimpleAttractionDto> fetchTouristAttractions(String keyword) {
+    // api 요청 전담
+    public String searchAttraction(String keyword) {
         try {
-            URI uri = UriComponentsBuilder.fromHttpUrl("http://apis.data.go.kr/B551011/KorService1/searchKeyword1")
-                    .queryParam("serviceKey", serviceKey) // 인코딩 금지
-                    .queryParam("keyword", URLEncoder.encode(keyword, StandardCharsets.UTF_8))
-                    .queryParam("MobileOS", "ETC")
-                    .queryParam("MobileApp", "TestApp")
-                    .queryParam("_type", "json")
-                    .build(false) // 인코딩 X
-                    .toUri();
+            // keyword와 apiKey 둘 다 인코딩
+            String encodedApiKey = URLEncoder.encode(apiKey, StandardCharsets.UTF_8.name());
+            String encodedKeyword = URLEncoder.encode(keyword, StandardCharsets.UTF_8.name());
 
-            String body = webClient.get()
-                    .uri(uri)
+            // URL 요청 만들기
+            String requestUrl = apiUrl
+                    + "?serviceKey=" + encodedApiKey
+                    + "&keyword=" + encodedKeyword
+                    + "&MobileOS=ETC"
+                    + "&MobileApp=TestApp"
+                    + "&_type=json";
+
+            System.out.println("api request URL: " + requestUrl);  // 요청 URL 로그 출력
+
+            // WebClient로 GET 요청
+            String response = webClient.get()
+                    .uri(requestUrl)
+                    .header("Accept-Charset", "UTF-8")
                     .retrieve()
-                    .onStatus(HttpStatusCode::isError, response -> {
-                        log.error("공공API 요청 실패: statusCode = {}", response.statusCode());
-                        return Mono.error(new RuntimeException("공공API 호출 실패"));
-                    })
                     .bodyToMono(String.class)
                     .block();
+            return new String(response.getBytes(StandardCharsets.ISO_8859_1), StandardCharsets.UTF_8);
 
-            if (!body.trim().startsWith("{")) {
-                log.error("공공API 응답이 JSON이 아님: {}", body);
-                throw new RuntimeException("공공API 응답 형식 오류");
-            }
-
-            return parseToSimpleDtoList(body);
-
-        } catch (Exception e) {
-            log.error("공공API 호출 중 예외 발생", e);
-            return Collections.emptyList();
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+            return "인코딩 오류 발생";
         }
     }
 
-    private List<SimpleAttractionDto> parseToSimpleDtoList(String body) throws Exception {
-        JsonNode root = objectMapper.readTree(body);
-        JsonNode items = root.at("/response/body/items/item");
-        List<SimpleAttractionDto> result = new ArrayList<>();
+    // 데이터 가공 전담
+    public List<AttractionResponse> parseApiResponse(String apiResponse) {
+        List<AttractionResponse> attractions = new ArrayList<>();
+        ObjectMapper mapper = new ObjectMapper();
 
-        if (items.isArray()) {
-            for (JsonNode item : items) {
-                result.add(SimpleAttractionDto.builder()
-                        .title(item.path("title").asText())
-                        .addr1(item.path("addr1").asText(null))
-                        .firstimage(item.path("firstimage").asText(null))
-                        .mapx(item.path("mapx").asDouble(0.0))
-                        .mapy(item.path("mapy").asDouble(0.0))
-                        .contentid(item.path("contentid").asText(null))
-                        .contenttypeid(item.path("contenttypeid").asText(null))
-                        .build());
+        try {
+            // JSON 응답을 파싱
+            JsonNode root = mapper.readTree(apiResponse);
+            JsonNode items = root.at("/response/body/items/item"); // JSON 구조 맞춰서 수정
+
+            if (items.isMissingNode() || items.isNull()) {
+                System.out.println("관광지 검색 결과가 없습니다.");
+                return attractions; // 빈 리스트 반환
             }
+            if (items.isArray()) {
+                for (JsonNode item : items) {
+                    String title = item.path("title").asText();
+                    if (title.isEmpty()) continue;
+                    String firstImage = item.path("firstimage").asText();
+                    String addr = item.path("addr1").asText();
+                    double mapx = item.path("mapx").asDouble();
+                    double mapy = item.path("mapy").asDouble();
+                    AttractionResponse attractionResponse = new AttractionResponse(title, firstImage, addr, mapx, mapy);
+                    attractions.add(attractionResponse);
+                }
+            } else {
+                // 검색결과가 1건일 경우 JSON 배열이 아닌 단일 객체 형태로 내려올 수도 있음
+                String title = items.path("title").asText();
+                String firstImage = items.path("firstimage").asText();
+                String addr = items.path("addr1").asText();
+                double mapx = items.path("mapx").asDouble();
+                double mapy = items.path("mapy").asDouble();
+
+                attractions.add(new AttractionResponse(title, firstImage, addr, mapx, mapy));
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            return Collections.emptyList();
         }
 
-        return result;
+        return attractions;
     }
 }
